<resources>
    <string name="app_name">NiceStart</string>

    <!-- LOGIN -->
    <string name="girl">Una chica sonriendo</string>
    <string name="rayo">Logo de un Rayo</string>
    <string name="till1">Username</string>
    <string name="till2">Password</string>
    <string name="button1">LOGIN</string>
    <string name="button2">SIGNUP</string>

    <!-- REGISTER -->
    <string name="hipman">Un chico sonriendo</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="password2">Confirm Password</string>
    <string name="ok">OK</string>

    <!-- TINDER -->
    <string name="girl1">Elena Ferrer</string>
    <string name="desc_girl1">Soy amante de la música, la comida y los viajes. Siempre buscando aventuras y momentos especiales en la vida. Sonrisa radiante y apasionada por la naturaleza. ¿Listo para una nueva experiencia? 😊🌍🎶</string>
    <string name="girl2">Maria Fernandez</string>
    <string name="desc_girl2">Holaaa! Soy una amante de la naturaleza y los deportes al aire libre. Disfruto de las caminatas en la montaña y de la tranquilidad de un buen libro. ¿Quieres compartir una nueva aventura conmigo? 😊🏞📚</string>
    <string name="girl3">Laura Gomez</string>
    <string name="desc_girl3">Aventurera y amante de los deportes extremos. Siempre buscando emociones fuertes y adrenalina. ¿Te unirás a la diversión? 🏄‍♀️🚵‍♀️</string>
    <string name="girl4">Carla Pérez</string>
    <string name="desc_girl4">Apasionada por la moda, el arte y las compras. Siempre en busca de la última tendencia. ¿Listo para un día de compras? 👗🛍️</string>
    <string name="girl5">Sofía Vargas</string>
    <string name="desc_girl5">Amante de los animales, la naturaleza y el aire libre. Siempre en busca de un nuevo amigo peludo. ¿Te unirás a nuestras aventuras? 🐶🌿</string>
    <string name="boy1">Juan Mendez</string>
    <string name="desc_boy1">Mi pasion la tecnología y los videojuegos. Disfruto de las noches de películas y de las conversaciones profundas. Siempre listo para nuevas experiencias y conocer gente interesante. ¿Te animas a charlar? 😊🎮🎥</string>
    <string name="boy2">Kevin Lozano</string>
    <string name="desc_boy2">Un piquito? Nahh. Busco gente divertida, te va mi rollo? Dame PASS</string>
    <string name="boy3">David Rodríguez</string>
    <string name="desc_boy3">Aventurero urbano, amante de la música indie y la vida nocturna. Siempre explorando la ciudad en busca de nuevos sonidos. ¿Listo para un concierto? 🎸🌆</string>
    <string name="boy4">Juan Martínez</string>
    <string name="desc_boy4">Amante de la literatura, los viajes y las historias inexploradas. Siempre en busca de una nueva página por descubrir. ¿Listo para un viaje literario? 📚🌍</string>
    <string name="boy5">Gabriel Torres</string>
    <string name="desc_boy5">Apasionado por la cocina, los sabores y la gastronomía. Siempre dispuesto a sorprender con platos deliciosos. ¿Te atreves a probar mis creaciones? 🍽️👨‍🍳</string>
    <string name="smash">SMASH</string>
    <string name="pass">PASS</string>

    <!-- MAIN -->
    <string name="main">MATCH</string>
    <string name="gen1">CHICAS</string>
    <string name="gen2">CHICOS</string>
    <string name="gen3">AMBOS</string>
    <string name="main_desc">Escoge según tus preferencias</string>
</resources>